--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       sizes="32x32"
       href="./src/images/favicon-32x32.png"
     />
+    <!-- Estilos -->
+    <link rel="stylesheet" href="./src/index.css" />
 
     <title>NFT preview card component</title>
   </head>
